# mascoty-will

./: .gitignore  Cargo.toml  README.md  bin-206aa0dc33779768.js  bin-206aa0dc33779768_bg.wasm  index-bd1ab333cb19bacf.css  index-fc65b6f897bf6716.css  index.html  index.scss  mascoty-will-7b69448a63fc3326.js  mascoty-will-7b69448a63fc3326_bg.wasm
.github/workflows/: cd.yaml  ci.yaml  test.yml
src/: app.rs  lib.rs  main.rs  router.rs
src/mascot/: emotion.rs  eyes.rs  lips.rs  mod.rs
